<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="412dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/playerNameEditText"
                android:autofillHints=""
                android:inputType="text"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:hint="@string/enter_player_name"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/score_0"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/currentHoldTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/current_hold_0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/climbButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/climb" />

            <Button
                android:id="@+id/fallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/fall" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/reset" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>